--- a/src/container/index/index.hbs
+++ b/src/container/index/index.hbs
@@ -9,7 +9,7 @@
   <form method="POST" action="/user-create">
 <div class"form_content">
   <div class="form_field">
-   <label for="email" class"form_label">Email адреса</label>
+   <label for="email" class"form_label">Email адреса:</label>
    <input type="email" name="email" class ="form_input">
   </div>
   <div class="form_field">
@@ -18,10 +18,10 @@
 </div>
 <div class="form_field">
    <label for="password" class"form_label">Пароль:</label>
-   <input type="password" name="passworld" class ="form_input">
+   <input type="password" name="password" class ="form_input">
 </div>
 <button class="form_button">Створити</button>
-</div>
+</div> 
 </form>
 </div>
 </section>
@@ -51,16 +51,16 @@
   <form method="POST" action="/user-update">
 <div class"form_content">
    <div class="form_field">
-   <label for="id" class"form_label">ID</label>
+   <label for="id" class"form_label">ID:</label>
    <input type="id" name="id" class ="form_input">
   </div>
   <div class="form_field">
-   <label for="email" class"form_label">Нова еmail адреса</label>
+   <label for="email" class"form_label">Нова еmail адреса:</label>
    <input type="email" name="email" class ="form_input">
   </div>
 <div class="form_field">
    <label for="password" class"form_label">Пароль:</label>
-   <input type="password" name="passworld" class ="form_input">
+   <input type="password" name="password" class ="form_input">
 </div>
 <button class="form_button">Відправити</button>
 </div>
