--- a/src/container/index/index.hbs
+++ b/src/container/index/index.hbs
@@ -2,11 +2,76 @@
 Це код container файлу для index сторінки, 
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
  }}
-
-<div >
-  Hello world!
+<main>
+<section>
+<div class="form">
+  <h1 class="form_title>">Cтворення товару</h1>
+  <form method="POST" action="/product-create">
+<div class"form_content">
+  <div class="form_field">
+   <label for="product" class"form_label">Інформація про товар</label>
+   <input type="product" name="product" class ="form_input">
+  </div>
+  <div class="form_field">
+   <label for="name" class"form_label">Назва товару</label>
+   <input type="name" name="name" class ="form_input">
+  </div>
+  <div class="form_field">
+   <label for="price" class"form_label">Ціна</label>
+   <input type="price" name="price" class ="form_input">
 </div>
+<div class="form_field">
+   <label for="description" class"form_label">Короткий опис товару</label>
+   <input type="description" name="description" class ="form_input">
+</div>
+<button class="form_button">Створити товар</button>
+</div> 
+</form>
+</div>
+</section>
 
+<section>
+  <div class="form">
+    <h1 class = "form_title">Список товарів</h1>
+    <div class = "product-list">
+      {{#with data.product}}
+      {{#if isEmpty}}
+      <mark>Пустий</mark>
+      {{else}}
+      <ul>
+      {{#each list}}
+      <li>{{name}} | {{id}} | {{price}} | {{description}} <a href="/product-delete?id={{id}}">(видалити)</a></li>
+      {{/each}}
+      </ul>
+      {{/if}}
+      {{/with}}
+    </div>
+  </div>
+</section>
+
+<section>
+<div class="form">
+  <h1 class="form_title>">Оновити товар </h1>
+  <form method="POST" action="/user-edit">
+<div class"form_content">
+   <div class="form_field">
+   <label for="name" class"form_label">Назва товару</label>
+   <input type="name" name="name" class ="form_input">
+  </div>
+  <div class="form_field">
+   <label for="price" class"form_label">Ціна товару</label>
+   <input type="price" name="price" class ="form_input">
+  </div>
+<div class="form_field">
+   <label for="description" class"form_label">Короткий опис товару</label>
+   <input type="description" name="description" class ="form_input">
+</div>
+<button class="form_button">Відправити</button>
+</div>
+</form>
+</div>
+</section>
+</main>
 {{! 
     Цей код містить лише те, що буде виводитись в <body>
     Адже наш layout/default.hbs має вже структуру HTML
