--- a/src/container/index/index.hbs
+++ b/src/container/index/index.hbs
@@ -1,7 +1,7 @@
 {{! 
 Це код container файлу для index сторінки, 
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
- }}
+}}
 <main>
 <section>
 <div class="form">
@@ -32,15 +32,15 @@
 
 <section>
   <div class="form">
-    <h1 class = "form_title">Список товарів</h1>
+    <h1 class = "form_title">Створити список товарів</h1>
     <div class = "product-list">
-      {{#with data.product}}
+      {{#with data.products}}
       {{#if isEmpty}}
-      <mark>Пустий</mark>
+      <mark>Список товарів пустий</mark>
       {{else}}
       <ul>
       {{#each list}}
-      <li>{{name}} | {{id}} | {{price}} | {{description}} <a href="/product-delete?id={{id}}">(видалити)</a></li>
+      <li>{{name}} | {{id}} | {{price}} | {{description}} <a href="/product-delete?id={{id}}">(Видалити товар)</a></li>
       {{/each}}
       </ul>
       {{/if}}
@@ -52,7 +52,7 @@
 <section>
 <div class="form">
   <h1 class="form_title>">Оновити товар </h1>
-  <form method="POST" action="/user-edit">
+  <form method="POST" action="/product-edit">
 <div class"form_content">
    <div class="form_field">
    <label for="name" class"form_label">Назва товару</label>
