--- a/src/container/index/style.scss
+++ b/src/container/index/style.scss
@@ -7,34 +7,34 @@
     gap: s.space(8);
 
 
-   &__title {
+   &_title {
     font-size: 20px;
     font-weight: bold;
     padding-bottom: s.space(1);
     border-bottom: 1px solid s.color('light');
    }
 
-   &__content {
+   &_content {
     display: grid;
     gap: s.space(6);
    }
 
-   &__field {
+   &_field {
     display: flex;
     flex-direction: column;
     gap: s.space(2);
    }
 
-   &__label {
+   &_label {
     font-size: 14px;
    }
 
-   &__input {
+   &_input {
     border: 1px solid s.color('dark');
     padding: s.space(2);
    }
 
-  &__button {
+  &_button {
     border: 1px solid s.color('light');
     padding: s.space(2);
 }
