Виправ помилок b2-product

--- a/src/container/index/index.hbs
+++ b/src/container/index/index.hbs
@@ -3,15 +3,13 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
 }}
 <main>
-<section>
-<div class="form">
   <h1 class="form_title>">Cтворення товару</h1>
+  <section>
+<div class="form">
   <form method="POST" action="/product-create">
-<div class"form_content">
-  <div class="form_field">
    <label for="product" class"form_label">Інформація про товар</label>
-   <input type="product" name="product" class ="form_input">
   </div>
+  <div class"form_content"></div>
   <div class="form_field">
    <label for="name" class"form_label">Назва товару</label>
    <input type="name" name="name" class ="form_input">
@@ -20,7 +18,7 @@
    <label for="price" class"form_label">Ціна</label>
    <input type="price" name="price" class ="form_input">
 </div>
-<div class="form_field">
+<div class="form_field1">
    <label for="description" class"form_label">Короткий опис товару</label>
    <input type="description" name="description" class ="form_input">
 </div>
@@ -30,24 +28,7 @@
 </div>
 </section>
 
-<section>
-  <div class="form">
-    <h1 class = "form_title">Створити список товарів</h1>
-    <div class = "product-list">
-      {{#with data.products}}
-      {{#if isEmpty}}
-      <mark>Список товарів пустий</mark>
-      {{else}}
-      <ul>
-      {{#each list}}
-      <li>{{name}} | {{id}} | {{price}} | {{description}} <a href="/product-delete?id={{id}}">(Видалити товар)</a></li>
-      {{/each}}
-      </ul>
-      {{/if}}
-      {{/with}}
-    </div>
-  </div>
-</section>
+
 
 <section>
 <div class="form">
@@ -62,7 +43,7 @@
    <label for="price" class"form_label">Ціна товару</label>
    <input type="price" name="price" class ="form_input">
   </div>
-<div class="form_field">
+<div class="form_field1">
    <label for="description" class"form_label">Короткий опис товару</label>
    <input type="description" name="description" class ="form_input">
 </div>
