--- a/src/container/index/style.scss
+++ b/src/container/index/style.scss
@@ -5,37 +5,45 @@
     flex-direction: column;
     padding: s.space(4);
     gap: s.space(8);
+    
 
-
-   &_title {
+   &__title {
     font-size: 20px;
     font-weight: bold;
     padding-bottom: s.space(1);
-    border-bottom: 1px solid s.color('light');
+    border-bottom: 1px solid;
    }
 
    &_content {
-    display: grid;
+    display: flex;
     gap: s.space(6);
    }
 
    &_field {
+    display: contents;
+    flex-direction: column;
+    gap: s.space(2);
+   }
+
+   &_field1 {
     display: flex;
     flex-direction: column;
     gap: s.space(2);
    }
 
    &_label {
+    padding-top: 20px;
     font-size: 14px;
    }
 
    &_input {
     border: 1px solid s.color('dark');
-    padding: s.space(2);
+    padding-bottom: 20px;
    }
 
   &_button {
-    border: 1px solid s.color('light');
+    background-color: s.color('light');
+    border: 1px solid s.color('dark');
     padding: s.space(2);
 }
 }
