--- a/src/container/product-list/index.hbs
+++ b/src/container/product-list/index.hbs
@@ -3,7 +3,25 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
  }}
 
-
+ <div class="form">
+    <h1 class = "form_title">Створити список товарів</h1>
+    <div class"form_content">
+    <div class = "product-list">
+      {{#with data.products}}
+      {{#if isEmpty}}
+      <mark>Список товарів пустий</mark>
+      {{else}}
+      <ul>
+      {{#each list}}
+      <li> {{id}} <a href="/product-delete?id={{id}}"></a></li>
+      {{/each}}
+      </ul>
+      {{/if}}
+      {{/with}}
+    </div>
+    <button class="form_button">Редагувати товар </button>
+  </div>
+  </div>
 
 
 
