--- a/src/container/index/index.hbs
+++ b/src/container/index/index.hbs
@@ -43,6 +43,10 @@
    <label for="price" class"form_label">Ціна товару</label>
    <input type="price" name="price" class ="form_input">
   </div>
+   <div class="form_field">
+   <label for="id" class"form_label">ID</label>
+   <input type="id" name="id" class ="form_input">
+  </div>
 <div class="form_field1">
    <label for="description" class"form_label">Короткий опис товару</label>
    <input type="description" name="description" class ="form_input">
