--- a/src/container/product-list/index.hbs
+++ b/src/container/product-list/index.hbs
@@ -13,13 +13,13 @@
       {{else}}
       <ul>
       {{#each list}}
-      <li> {{id}} <a href="/product-delete?id={{id}}"></a></li>
+      <li> {{id}} <a href="/product-delete?id={{id}}">ідентифікатор товару</a></li>
       {{/each}}
       </ul>
       {{/if}}
       {{/with}}
     </div>
-    <button class="form_button">Редагувати товар </button>
+    <button class="form_button">Редагувати</button>
   </div>
   </div>
 
