--- a/src/container/product-list/index.hbs
+++ b/src/container/product-list/index.hbs
@@ -2,7 +2,7 @@
 Це код container файлу для index сторінки, 
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
  }}
-
+<main>
  <div class="form">
     <h1 class = "form_title">Створити список товарів</h1>
     <div class"form_content">
@@ -22,7 +22,7 @@
     <button class="form_button">Редагувати</button>
   </div>
   </div>
-
+</main>
 
 
 {{! 
