--- a/src/container/product-edit/index.hbs
+++ b/src/container/product-edit/index.hbs
@@ -23,7 +23,8 @@
    <label for="description" class"form_label">Короткий опис товару</label>
    <input type="description" name="description" class ="form_input">
 </div>
-<button class="form_button">Відправити</button>
+<button class="form_button">Зберегти оновлення</button>
+<a href = "/product-delete?id={{id}}"class"form_button red">Видалити товар</a>
 </div>
 </form>
 </div>
