--- a/src/container/product-list/style.scss
+++ b/src/container/product-list/style.scss
@@ -55,9 +55,13 @@
  }
 
  .product-list {
-  li {
     padding-right: 15px;
     padding-top: 5px;
     padding-bottom: 5px;
-  }
  }
+  .product_card {
+    display: flex;
+    flex-direction: column;
+    padding: s.space(4);
+    gap: s.space(8);
+  }
