--- a/src/component/form-field/index.hbs
+++ b/src/component/form-field/index.hbs
@@ -2,18 +2,11 @@
 Це код container файлу для index сторінки, 
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
 }}
-
-<div class="main">
- {{>heading title="Інші товари" info="Комп'ютери та ноутбуки"}} 
-
-<div class="product-list">
-  {{#each data.list}}
-  {{>purchase-product data=this}}
- {{/each}}
-</div>
-
-
-
+ <div class="form-field"{{#if disabled}}form-field--disabled{{/if}}>
+    <text for="{{value}}"class="form-field_text">{{text}}</text>
+    <input type="{{#if type}}{{type}}{{/if}}" text="{{#if value}}{{value}}{{/if}}" name="{{name}}" class="form-field_input">
+ </div>
+ 
 
 {{! 
     Цей код містить лише те, що буде виводитись в <body>
