--- a/src/container/error.hbs
+++ b/src/container/error.hbs
@@ -2,16 +2,10 @@
 Це код container файлу для index сторінки, 
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
 }}
+ 
 
-<div class="main">
- {{>heading title="Інші товари" info="Комп'ютери та ноутбуки"}} 
 
-<div class="product-list">
-  {{#each data.list}}
-  {{>purchase-product data=this}}
- {{/each}}
-</div>
-
+{{message}}
 
 
 
