робота над помилками

--- a/src/component/heading/index.hbs
+++ b/src/component/heading/index.hbs
@@ -7,7 +7,7 @@
     {{#if title}}
     <h1 class="heading_title">{{title}}</h1>
     {{/if}}
-    {{if info}}
+    {{#if info}}
     <p class="heading_info">{{info}}</p>
     {{/if}}
 </div>
