--- a/src/component/field/style.scss
+++ b/src/component/field/style.scss
@@ -1,18 +1,19 @@
-@use'../..lib/service.scss' as s;
+@use'../../lib/service.scss' as s;
 
 .field {
     display: flex;
     flex-direction: column;
-    gap:s.space(1);
+    gap: s.space(1);
     width: 100%;
 }
+
 .field_label {
     font-size: 14px;
 }
 
 .field_input {
     border: 1px solid s.color('light');
-    padding: s.space(2);
+   padding: 8px;
     border-radius: 10px;
 }
  
