--- a/src/container/purchase-product/style.scss
+++ b/src/container/purchase-product/style.scss
@@ -1,3 +1,4 @@
+@use'../../lib/service.scss' as s;
 @use '../../component/heading/style.scss'as healding;
 
 @use '../../component/field/style.scss'as field;
