--- a/src/component/field/style.scss
+++ b/src/component/field/style.scss
@@ -13,7 +13,7 @@
 
 .field_input {
     border: 1px solid s.color('light');
-   padding: 8px;
+    padding: s.space(2);
     border-radius: 10px;
 }
  
