--- a/src/container/purchase-index/index.hbs
+++ b/src/container/purchase-index/index.hbs
@@ -3,7 +3,7 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
 }}
 
-<div class="main">
+<main class="main">
  {{>heading title="Інші товари" info="Комп'ютери та ноутбуки"}} 
 
 <div class="product-list">
@@ -11,7 +11,7 @@
   {{>purchase-product data=this}}
  {{/each}}
 </div>
-
+</main>
 
 
 
