--- a/src/container/purchase-product/style.scss
+++ b/src/container/purchase-product/style.scss
@@ -1,6 +1,7 @@
 @use'../../lib/service.scss' as s;
-@use '../../component/heading/style.scss'as healding;
 
+@use '../../component/heading/style.scss'as healding;
+@use '../../component/purchase-product/style.scss'as purchaseProduct;
 @use '../../component/field/style.scss'as field;
 @use '../../component/divider/style.scss'as divider;
 
@@ -8,11 +9,11 @@
 .main {
     display: flex;
     flex-direction: column;
-    gap:s.space(10);
+    gap: s.space(10);
     padding: s.space(10);
 }
 
-.product.info {
+.product-info {
     display: flex;
     flex-direction: column;
     gap:s.space(4);
