--- a/src/container/purchase-list/style.scss
+++ b/src/container/purchase-list/style.scss
@@ -1,6 +1,6 @@
-@use '../../lib/service.scss'as s;
+@use '../../lib/service.scss' as s;
 
-.section {
+.purchase-list {
     display: flex;
     flex-direction: column;
     gap: s.space(10);
@@ -9,8 +9,8 @@
   
   .purchase-item_block {
     width: 100%;
-    display: grid;
-    grid-template-columns: 1fr solid s.color(dark);
+    // display: grid;
+    // grid-template-columns: 1fr solid s.color(dark);
     gap: s.space(5);
   }
 
