--- a/src/container/purchase-index/index.hbs
+++ b/src/container/purchase-index/index.hbs
@@ -1,21 +1,21 @@
-{{! 
-Це код container файлу для index сторінки, 
+{{!
+Це код container файлу для index сторінки,
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
 }}
 
+  {{> heading title="Інші товари" info="Комп'ютери та ноутбуки"}}
 <main class="main">
- {{>heading title="Інші товари" info="Комп'ютери та ноутбуки"}} 
 
-<div class="product-list">
-  {{#each data.list}}
-  {{>purchase-product data=this}}
- {{/each}}
-</div>
+    {{#each data.list}}
+    {{> purchase-product data=this}}
+    {{/each}}
 </main>
 
 
 
-{{! 
-    Цей код містить лише те, що буде виводитись в <body>
-    Адже наш layout/default.hbs має вже структуру HTML
-}}
+{{!
+Цей код містить лише те, що буде виводитись в
+
+<body>
+  Адже наш layout/default.hbs має вже структуру HTML
+  }}
