--- a/src/container/purchase-info/index.hbs
+++ b/src/container/purchase-info/index.hbs
@@ -1,53 +1,84 @@
-{{! 
-Це код container файлу для index сторінки, 
+{{!
+Це код container файлу для index сторінки,
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
 }}
-<main class="main">
-  
-{{#with data}}
-<form method="POST" action="/purchase-create?id={{id}}" class="form-card">
-{{>heading title="Інформація про замовлення"}}
+<main class='main'>
+  <section class="purchase-info">
+      <div class='form'>
+          {{>heading title="Інформація про замовлення"}}
 
-<ul class="cart">
-    {{#each cart}}
-    <li class="cart_item">
-        <span>{{text}}</span>
-        <span>{{price}} грн</span>
-    </li>
-    {{/each}}
-</ul>
-{{>divider}}
+          {{#with data}}
+              <div class='purchase-item__block'>
+                <span class='title'>ID:</span>
+                <span class='text'>{{id}}</span>
+              </div>
+              {{> divider}}
+              <div class='purchase-item'>
+                <div class="purchase-item__block">
+                  <span class='title'>Ім'я:</span>
+                  <span class='text'>{{firstname}}</span>
+                </div>
+                <div class='purchase-item__block'>
+                  <span class='title'>Прізвище:</span>
+                  <span class='text'>{{lastname}}</span>
+                </div>
+              </div>
 
-{{>field text ="ID" value="id"}} 
-{{>field text ="Number" value="number"}}
-{{>field text ="Ім'я" value="firstname"}} 
-{{>field text ="Прізвище" value ="lastname"}}
-{{>field text ="Телефон" value ="phone"}}
-{{>field text ="Пошта" value ="email"}}
-{{>field text ="Коментар" value ="comment"}}
-{{>field text ="Списати бонуси" value ="bonus"}}
-{{>field text ="Промо-код" value ="promocode"}}
+              <div class='purchase-item'>
+                <div class="purchase-item__block">
+                  <span class='title'>Телефон:</span>
+                  <span class='text'>{{phone}}</span>
+                </div>
+                <div class='purchase-item__block'>
+                  <span class='title'>Електронна пошта:</span>
+                  <span class='text'>{{email}}</span>
+                </div>
+              </div>
+              {{> divider}}
 
-{{>button text="Змінити дані"}}
+              <div class='purchase-item__block'>
+                <span class='title'>Адреса доставки:</span>
+                <span class='text'>{{delivery}}</span>
+              </div>
+              <div class='purchase-item__block'>
+                <span class='title'>Назва товару:</span>
+                <span class='text'>{{product}}</span>
+              </div>
+              {{> divider}}
 
-{{>divider}}
+              <div class='purchase-item'>
+                <div class="purchase-item__block">
+                  <span class='title'>Вартість товарів:</span>
+                  <span class='text'>{{productPrice}}</span>
+                </div>
+                <div class='purchase-item__block'>
+                  <span class='title'>Вартість доставки:</span>
+                  <span class='text'>{{deliveryPrice}}</span>
+                </div>
+              </div>
 
-{{>heading title="Зміна данних"}}
-{{>field text ="ID" value="id"}} 
-{{>field text ="Number" value="number"}}
-{{>field text ="Ім'я" value="firstname"}} 
-{{>field text ="Прізвище" value ="lastname"}}
-{{>field text ="Телефон" value ="phone"}}
-{{>field text ="Пошта" value ="email"}}
-
-{{>button text ="Зберегти зміни"}}
-
-</form>
-{{/with}}
-
+              <div class='purchase-item'>
+                <div class="purchase-item__block">
+                  <span class='title'>Сума до сплати:</span>
+                  <span class='text'>{{totalPrice}}</span>
+                </div>
+                <div class='purchase-item__block'>
+                  <span class='title'>Нараховані бонуси:</span>
+                  <span class='text'>{{bonus}}</span>
+                </div>
+              </div>
+              {{> divider}}
+          
+          <a href='/purchase-edit?id={{id}}'>
+            {{> button text="Змінити дані"}}
+          </a>
+        {{/with}}
+      </div>
+  </section>
 </main>
+{{!
+Цей код містить лише те, що буде виводитись в
 
-{{! 
-    Цей код містить лише те, що буде виводитись в <body>
+<body>
     Адже наш layout/default.hbs має вже структуру HTML
-}}
+    }}
