--- a/src/container/purchase-info/style.scss
+++ b/src/container/purchase-info/style.scss
@@ -1,29 +1,29 @@
-@use '../../component/heading/style.scss'as healding;
-@use '../../component/purchase-product/style.scss'as purchaseProduct;
-@use '../../component/field/style.scss'as field;
-@use '../../component/button/style.scss'as button;
-
+@use '../../component/heading/style.scss' as healding;
+@use '../../component/purchase-product/style.scss' as purchaseProduct;
+@use '../../component/field/style.scss' as field;
+@use '../../component/button/style.scss' as button;
+// @use'../../lib/service.scss' as s;
 
 .main {
     display: flex;
     flex-direction: column;
-    gap: s.space(10);
-    padding: s.space(10);
+    // gap: s.space(10);
+    // padding: s.space(10);
 }
 
 .form-card {
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: s.space(5);
-    padding: s.space(5);
-    border: 1px solid s.color(border);
+    // gap: s.space(5);
+    // padding: s.space(5);
+    // border: 1px solid s.color(border);
     border-radius: 10px;
 }
 
 .cart {
     display: grid;
-    gap: s.space(2);
+    // gap: s.space(2);
 }
 
 .cart_item {
