--- a/src/container/purchase-list/style.scss
+++ b/src/container/purchase-list/style.scss
@@ -9,9 +9,9 @@
   
   .purchase-item_block {
     width: 100%;
-    // display: grid;
-    // grid-template-columns: 1fr solid s.color(dark);
-    gap: s.space(5);
+   display: grid;
+  // grid-template-columns: 1fr solid s.color(dark);
+   // gap: s.space(5);
   }
 
  
