--- a/src/container/purchase-edit/style.scss
+++ b/src/container/purchase-edit/style.scss
@@ -11,7 +11,7 @@
     // padding: s.space(10);
 }
 
-.form-card {
+.form {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,6 +20,8 @@
     // border: 1px solid s.color(border);
     border-radius: 10px;
 }
+
+
 
 
 
