--- a/src/container/spotify-choose/index.hbs
+++ b/src/container/spotify-choose/index.hbs
@@ -4,24 +4,24 @@
 }}
 
 <main class="main">
-  <div class="main_content">
+  <div class="main__content">
     <h1 class="title title--center">Створити</h1>
     <ul class="choose">
       <a href="/spotify-create">
-        <li class="choose_item">
-          <img src="/svg/choose_1.svg" class="choose_image">
-          <div class="choose_content">
+        <li class="choose__item">
+          <img src="/svg/choose_1.svg" class="choose__image">
+          <div class="choose__content">
             <strong class="title">Плейліст</strong>
-            <p class="choose_text">Створіть плейліст з піснями та епізодами</p>
+            <p class="choose__text">Створіть плейліст з піснями та епізодами</p>
           </div>
         </li>
       </a>
       <a href="spotify-create?isMix=true">
-        <li class="choose_item">
-          <img src="/svg/choose_2.svg" class="choose_image">
-          <div class="choose_content">
+        <li class="choose__item">
+          <img src="/svg/choose_2.svg" class="choose__image">
+          <div class="choose__content">
             <strong class="title">Мікс</strong>
-            <p class="choose_text">Комбінуйте смаки в спільному плейлісті з друзями</p>
+            <p class="choose__text">Комбінуйте смаки в спільному плейлісті з друзями</p>
           </div>
         </li>
       </a>
